second scrap data cleaning code and clean data, updated data_encoding.json with company and model encoding.

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e411d789",
+   "id": "6c4e816d",
    "metadata": {},
    "source": [
     "# Delete unnecessary column price_list_url\n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "28263691",
+   "id": "1adb9980",
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "435bc5e4",
+   "id": "6f30bd6f",
    "metadata": {},
    "source": [
     "# No engine capacity Outliers\n",
@@ -2118,7 +2118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3e6ea2c",
+   "id": "3539a783",
    "metadata": {},
    "source": [
     "# Fill in the electric cars engine capacity\n",
@@ -2129,7 +2129,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d2f32be0",
+   "id": "1ab667cc",
    "metadata": {},
    "outputs": [
     {
@@ -2155,7 +2155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a43067",
+   "id": "ceeb8444",
    "metadata": {},
    "source": [
     "# Ad number Outliers\n",
@@ -2167,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cc961026",
+   "id": "60d7ba38",
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fed5d5b1",
+   "id": "bcd7210c",
    "metadata": {},
    "source": [
     "# price outliers\n",
@@ -3257,7 +3257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdc72f9c",
+   "id": "697b1b52",
    "metadata": {},
    "source": [
     "# Check the previous owner for outliers.\n",
@@ -3467,7 +3467,7 @@
     "# get list of non color rows\n",
     "indexes = data[data['צבע'].isnull()].index.to_list()\n",
     "# get the frequent value to variable\n",
-    "color_mode = data['צבע'].mode\n",
+    "color_mode = data['צבע'].mode()[0]\n",
     "# insert it to the non color rows.\n",
     "for index in indexes:\n",
     "    data.at[index,'צבע'] = color_mode\n",
@@ -3478,7 +3478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95430a4a",
+   "id": "108e7747",
    "metadata": {},
    "source": [
     "# Encode colors and change the color title to english"
@@ -3487,7 +3487,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "259f2418",
+   "id": "af51322b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3498,49 +3498,13 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b7cd90a6",
+   "id": "25bd70b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'לבן': 1141,\n",
-       " 'שחור': 541,\n",
-       " 'אפור': 522,\n",
-       " 'כסוף': 319,\n",
-       " 'כחול': 165,\n",
-       " 'אדום': 47,\n",
-       " 'כסף': 40,\n",
-       " 'ברונזה': 40,\n",
-       " \"בז'\": 35,\n",
-       " 'חום': 31,\n",
-       " 'ירוק': 25,\n",
-       " 'פלטינה': 18,\n",
-       " 'בורדו': 17,\n",
-       " 'תכלת': 15,\n",
-       " 'כתום': 14,\n",
-       " 'זהב': 11,\n",
-       " 'טורקיז': 11,\n",
-       " <bound method Series.mode of 1       שחור\n",
-       " 2        לבן\n",
-       " 3        לבן\n",
-       " 4       שחור\n",
-       " 5       אפור\n",
-       "         ... \n",
-       " 3384    אפור\n",
-       " 3385     לבן\n",
-       " 3386     לבן\n",
-       " 3387    שחור\n",
-       " 3388     לבן\n",
-       " Name: צבע, Length: 3023, dtype: object>: 5,\n",
-       " 'שמפניה': 5,\n",
-       " 'צהוב': 5,\n",
-       " 'ורוד': 5,\n",
-       " 'קרם': 3,\n",
-       " 'סגול': 3,\n",
-       " 'טוניק': 2,\n",
-       " 'ירקרק': 2,\n",
-       " 'חרדל': 1}"
+       "dict_keys(['לבן', 'שחור', 'אפור', 'כסוף', 'כחול', 'אדום', 'כסף', 'ברונזה', \"בז'\", 'חום', 'ירוק', 'פלטינה', 'בורדו', 'תכלת', 'כתום', 'זהב', 'טורקיז', 'שמפניה', 'צהוב', 'ורוד', 'קרם', 'סגול', 'טוניק', 'ירקרק', 'חרדל'])"
       ]
      },
      "execution_count": 19,
@@ -3551,12 +3515,12 @@
    "source": [
     "# inspect the color series values\n",
     "color_list = data.color.value_counts().to_dict()\n",
-    "color_list"
+    "color_list.keys()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "09ce6b9f",
+   "id": "a2f3d904",
    "metadata": {},
    "source": [
     "# Encode colors from 0 to 24"
@@ -3565,7 +3529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "40e22891",
+   "id": "f348c426",
    "metadata": {},
    "outputs": [
     {
@@ -3928,60 +3892,21 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3818ca84",
+   "id": "a7f28f12",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{0: 1141,\n",
-       " 1: 541,\n",
-       " 2: 522,\n",
-       " 3: 319,\n",
-       " 4: 165,\n",
-       " 5: 47,\n",
-       " 6: 40,\n",
-       " 7: 40,\n",
-       " 8: 35,\n",
-       " 9: 31,\n",
-       " 10: 25,\n",
-       " 11: 18,\n",
-       " 12: 17,\n",
-       " 13: 15,\n",
-       " 14: 14,\n",
-       " 15: 11,\n",
-       " 16: 11,\n",
-       " <bound method Series.mode of 1       1\n",
-       " 2       0\n",
-       " 3       0\n",
-       " 4       1\n",
-       " 5       2\n",
-       "        ..\n",
-       " 3384    2\n",
-       " 3385    0\n",
-       " 3386    0\n",
-       " 3387    1\n",
-       " 3388    0\n",
-       " Name: צבע, Length: 3023, dtype: object>: 5,\n",
-       " 17: 5,\n",
-       " 18: 5,\n",
-       " 19: 5,\n",
-       " 20: 3,\n",
-       " 21: 3,\n",
-       " 22: 2,\n",
-       " 23: 2,\n",
-       " 24: 1}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 1146, 1: 541, 2: 522, 3: 319, 4: 165, 5: 47, 6: 40, 7: 40, 8: 35, 9: 31, 10: 25, 11: 18, 12: 17, 13: 15, 14: 14, 15: 11, 16: 11, 17: 5, 18: 5, 19: 5, 20: 3, 21: 3, 22: 2, 23: 2, 24: 1}\n"
+     ]
     }
    ],
    "source": [
     "# exploring colors again for self test\n",
     "color_list = data.color.value_counts().to_dict()\n",
-    "color_list"
+    "print(color_list)"
    ]
   },
   {
