--- a/Cleaning&Encoding_Data_0705.ipynb
+++ b/Cleaning&Encoding_Data_0705.ipynb
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "95e2c922",
+   "id": "5461536c",
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8d708a60",
+   "id": "7a3ad7a1",
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b064856c",
+   "id": "fd1bcd0a",
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1d977689",
+   "id": "a9bfe7f1",
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7bc77619",
+   "id": "e53a1810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9c9fb89c",
+   "id": "149ccf91",
    "metadata": {},
    "outputs": [
     {
@@ -1818,19 +1818,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0d605d41",
+   "execution_count": 17,
+   "id": "ea14b5a1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# export the clean data\n",
-    "data.to_csv('./data/clean_data_0705.csv')"
+    "n_data.to_csv('./data/clean_data_0705.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16ec6eb8",
+   "id": "8eceaa15",
    "metadata": {},
    "outputs": [],
    "source": []
