EDA, Modeling, model_to_kind, and new clean_cars1605.csv

--- a/Cleaning&Encoding_Data_0705.ipynb
+++ b/Cleaning&Encoding_Data_0705.ipynb
@@ -17,7 +17,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "02f16e7e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -378,7 +380,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "edf4fc3c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -414,7 +418,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "0bfc3a73",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -789,7 +795,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "601ac7f1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -825,7 +833,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "bb772efd",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1194,6 +1204,14 @@
     "for index, row in data.iterrows():\n",
     "    data.at[index, ['enc_model']] = model_enc_dict[row.model]\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b828b02",
+   "metadata": {},
+   "source": [
+    "# Price handle"
    ]
   },
   {
